--- a/el-gamal.tex
+++ b/el-gamal.tex
@@ -14,7 +14,7 @@
 
 \subsection{Шифрование}\index{шифр!Эль-Гамаля|(}
 
-Процедура шифрования в криптосистеме Эль-Гамаля состоит из следующих операций.
+Процедура шифрования в криптосистеме Эль-Гамаля состоит из следующих операций:
 
 \begin{enumerate}
     \item \textbf{Создание пары из закрытого и открытого ключей стороной $A$.}
