blockchain.tex кавычки
названия заключаются в кавычки

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -60,7 +60,7 @@
 
 Наибольший интерес для нас -- и наименьший для компаний, продающих blockchain-решения, -- представляет децентрализованная система blockchain без выделенных центров генерации блоков. Каждый участник может взять набор транзакций, ожидающих включения в журнал, и сформировать новый блок. Более того, в системах типа Bitсoin\index{Bitcoin} такой участник (будем его назвать <<майнером>>, от \langen{to mine} -- копать) ещё и получит премию в виде определённой суммы и/или комиссионных от принятых в блок транзакций.
 
-Но нельзя просто так взять и сформировать блок в децентрализованных системах. Надёжность таких систем основывается именно на том, что новый блок нельзя сформировать быстрее (в среднем) чем за определённое время. Например, за 10 минут (Bitcoin). Это обеспечивается механизмом, который получил название доказательство работы (\langen{proof of work, PoW}).
+Но нельзя просто так взять и сформировать блок в децентрализованных системах. Надёжность таких систем основывается именно на том, что новый блок нельзя сформировать быстрее (в среднем) чем за определённое время. Например, за 10 минут (Bitcoin). Это обеспечивается механизмом, который получил название <<доказательство работы>> (\langen{proof of work, PoW}).
 
 Механизм основывается на следующей идее. Пусть есть криптографически стойкая хэш-функция $h(x)$, и задан некоторый параметр $t$ (от \langen{target} -- цель). $0 < t < 2^{n}$, где $n$ -- размер выхода хэш-функции в битах. Корректным новым блоком blockchain-сеть будет признавать только такой, значение хэш-суммы которого меньше текущего заданного параметра $t$. В этом случае алгоритм работы майнера выглядит следующий образом:
 \begin{itemize}
