blockchain.tex согласование членов предложения
Предложение с однородными подлежащими, сказуемое относится к каждому подлежащему. Т.е. майнер считает, сеть считает.

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -82,7 +82,7 @@
 
 Кроме задания параметра $t$ можно оперировать другими величинами, так или иначе относящимися к мощности вычислений.
 \begin{itemize}
-	\item \textit{Hashrate} -- количество хэшей, которые считают за единицы времени конкретный майнер или сеть в целом. Например, в ноябре 2017 года общий hashrate для сети Bitcoin составлял примерно $7,7 \times 10^{18}$ хэшей в секунду.
+	\item \textit{Hashrate} -- количество хэшей, которые считает за единицы времени конкретный майнер или сеть в целом. Например, в ноябре 2017 года общий hashrate для сети Bitcoin составлял примерно $7,7 \times 10^{18}$ хэшей в секунду.
 	\item \textit{Difficulty} -- сложность поиска корректного блока, выражаемая как $d = d_{const} / t$, где $d_{const}$ -- некоторая константа сложности, а $t$ -- текущая цель (\langen{target}). В отличие от параметра $t$, который падает с ростом вычислительной мощности сети, $d$ изменяется вместе с $hashrate$, что делает его более простым для восприятия и анализа человеком.
 \end{itemize}
 
