wide-mouth_frog.tex
Исправление имени
https://www.google.ru/search?newwindow=1&rlz=1C1AVNG_ruRU768RU768&q=%D0%9C%D0%B0%D0%B9%D0%BA%D0%BB+%D0%91%D0%B5%D1%80%D1%80%D0%BE%D1%83%D0%B7&stick=H4sIAAAAAAAAAONgecToyi3w8sc9YSmbSWtOXmM04-IKzsgvd80rySypFNLgYoOy5Lj4pLj0c_UNjJPzcs3NNBikeLiQ-DwA3qf7EUoAAAA&sa=X&ved=0ahUKEwi9rr7Rl5_YAhVqLZoKHZwUDJMQ6RMIiQEwEQ&biw=1366&bih=662

--- a/wide-mouth_frog.tex
+++ b/wide-mouth_frog.tex
@@ -1,5 +1,5 @@
 \subsection{Протокол Wide-Mouth Frog}\index{протокол!Wide-Mouth Frog|(}
-Протокол Wide-Mouth Frog является, возможно, самым простым протоколом с доверенным центром. Его автором считается Майкл Бэрроуз (1989 год, \langen{Michael Burrows},  \cite{Burrows:Abadi:Needham:1990}). Протокол состоит из следующих шагов.
+Протокол Wide-Mouth Frog является, возможно, самым простым протоколом с доверенным центром. Его автором считается Майкл Берроуз (1989 год, \langen{Michael Burrows},  \cite{Burrows:Abadi:Needham:1990}). Протокол состоит из следующих шагов.
 
 \begin{figure}[!htb]
     \centering
