--- a/groups_of_ec_points_over_finite_fields.tex
+++ b/groups_of_ec_points_over_finite_fields.tex
@@ -39,7 +39,7 @@
 
 Рассмотрим операцию сложения точек на эллиптической кривой при $D \ne 0$ (другие кривые не рассматриваются).
 
-Пусть точки $P(x_1; y_1)$ и $Q(x_2; y_2)$ принадлежат эллиптической кривой (рис.~\ref{fig:elliptic-curve-1}). Определим операцию сложения точек
+Пусть точки $P(x_1; y_1)$ и $Q(x_2; y_2)$ принадлежат эллиптической кривой (рис.~\ref{fig:elliptic-curve-1}). Определим операцию сложения точек:
     \[ P + Q = R. \]
 
 \begin{enumerate}
