--- a/tls.tex
+++ b/tls.tex
@@ -39,7 +39,7 @@
     \item $C \rightarrow S$:
         \begin{enumerate}
             \item Client Certificate: сертификат X.509v3 клиента, если он был запрошен сервером.
-            \item Client Key Exchange Message: информация для создания предварительного общего секрета $premaster$ длиной 48 байтов одним из следующих способов: ~ 1) обменом по протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана} с сервером (клиент отсылает $g^b$, в результате обе стороны вычисляют ключ $premaster = g^{ab}$), ~ 2) шифрованием ключа, выбранного клиентом, на открытом ключе из сертификата сервера, ~ 3) другим спобосом.
+            \item Client Key Exchange Message: информация для создания предварительного общего секрета $premaster$ длиной 48 байтов одним из следующих способов: ~ 1) обменом по протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана} с сервером (клиент отсылает $g^b$, в результате обе стороны вычисляют ключ $premaster = g^{ab}$), ~ 2) шифрованием ключа, выбранного клиентом, на открытом ключе из сертификата сервера, ~ 3) другим способом.
             \item Электронная подпись к Client Key Exchange Message на ключе сертификата клиента для аутентификации клиента серверу (если клиент использует сертификат).
             \item Certificate Verify: результат проверки сертификата сервера.
             \item Change Cipher Spec: уведомление о смене сеансовых ключей.
