--- a/Information Security.tex
+++ b/Information Security.tex
@@ -421,7 +421,7 @@ NIST (Национальный институт стандартов и техн
 			\item без пароля вообще;
 			\item имя аккаунта в качестве пароля;
 			\item имя аккаунта в качестве пароля, повторённое дважды;
-			\item использование <<ника>> (\langen{nickname});
+			\item использование <<ника>> ({nickname});
 			\item фамилия (\langen{last name, family name});
 			\item фамилия, записанная задом наперёд;
 		\end{itemize}
@@ -429,9 +429,9 @@ NIST (Национальный институт стандартов и техн
 		\item перебор паролей на основе системного словаря \texttt{/usr/dict/words}.
 \end{itemize}
 
-\emph{Программной уязвимостью}\index{программная уязвимость} называется свойство программы, позволяющее нарушить её работу. Программные уязвимости могут приводить к отказу в обслуживании (Denial of Service, DoS-атака)\index{атака!отказ в обслуживании}, утечке и изменению данных, появлению и распространению вирусов и червей.
+\emph{Программной уязвимостью}\index{программная уязвимость} называется свойство программы, позволяющее нарушить её работу. Программные уязвимости могут приводить к отказу в обслуживании (DoS-атака, \langen{Denial of Service})\index{атака!отказ в обслуживании}, утечке и изменению данных, появлению и распространению вирусов и червей.
 
-Одной из распространённых атак для заражения персональных компьютеров является переполнение буфера в стеке. В интернет-сервисах наиболее распространённой программной уязвимостью в настоящее время является межсайтовый скриптинг (Cross-Site Scripting, XSS-атака)\index{атака!XSS}.
+Одной из распространённых атак для заражения персональных компьютеров является переполнение буфера в стеке. В интернет-сервисах наиболее распространённой программной уязвимостью в настоящее время является межсайтовый скриптинг (XSS-атака, \langen{Cross-Site Scripting})\index{атака!XSS}.
 
 Наиболее распространённые программные уязвимости можно разделить на классы:
 \begin{enumerate}
