--- a/Information Security.tex
+++ b/Information Security.tex
@@ -421,7 +421,7 @@ NIST (Национальный институт стандартов и техн
 			\item без пароля вообще;
 			\item имя аккаунта в качестве пароля;
 			\item имя аккаунта в качестве пароля, повторённое дважды;
-			\item использование <<ника>> ({nickname});
+			\item использование <<ника>> (\langen{nickname});
 			\item фамилия (\langen{last name, family name});
 			\item фамилия, записанная задом наперёд;
 		\end{itemize}
