--- a/xss.tex
+++ b/xss.tex
@@ -9,7 +9,7 @@
 
 Скрипт также может выполнить последовательность HTTP GET- и POST-запросов на веб-сайт для выполнения действий от имени пользователя. Например вирусно распространить вредоносный JavaScript код со страницы одного пользователя на страницы всех друзей, друзей друзей и~т.\,д., а затем удалить все данные пользователя. Атака может привести к уничтожению социальной сети.
 
-Приведём пример кражи cookie-файла веб-сайта, который имеет уязвимость на вставку текста, содержащего исполняемый браузером код.
+Приведём пример кражи cookie-файла веб-сайта, который уязвим к вставке текста, содержащего исполняемый браузером код.
 
 %Когда браузер первый раз обращается к сайту, веб-приложение может выслать вместе с HTML страницей cookie-файл, хранящий текстовую строку последовательностей
 
