fixed style mismatch

--- a/ipsec.tex
+++ b/ipsec.tex
@@ -85,9 +85,9 @@ IPsec определяет:
 
 \emph{Защищённая связь} (\langen{Security Association, SA}) является \emph{однонаправленной} от отправителя к получателю и характеризуется тремя основными параметрами:
 \begin{itemize}
-    \item индексом параметров защиты -- уникальным 32-битовым числом, входящим в заголовок ESP- и AH-пакетов;
-    \item IP-адресом стороны-отправителя;
-    \item идентификатором применения ESP- или AH-протокола.
+    \item индекс параметров защиты -- уникальный 32-битное число, входящим в заголовок ESP- и AH-пакетов;
+    \item IP-адрес стороны-отправителя;
+    \item идентификатор применения ESP- или AH-протокола.
 \end{itemize}
 
 Защищённые связи хранятся в таблице защищённых связей со следующими полями:
@@ -161,4 +161,3 @@ IPsec определяет:
 	\includegraphics[width=0.9\textwidth]{pic/ipsec-ah-modes}
 	\caption{Применение протокола AH к пакету IPv6\label{fig:ipsec-ah-modes}}
 \end{figure}
-
